api-allow-5000-calico.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: default.api-allow-5000
  namespace: default
spec:
  tier: default
  order: 1000
  selector: app == "apiserver"
  serviceAccountSelector: ''
  types:
    - Ingress
