redis-allow-services-calico.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: default.redis-allow-services
  namespace: default
spec:
  tier: default
  order: 1000
  selector: (app == "bookstore"&&role == "db")
  serviceAccountSelector: ''
  types:
    - Ingress
