web-deny-all-calico.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: default.web-deny-all
  namespace: default
spec:
  tier: default
  order: 1000
  selector: app == "web"
  serviceAccountSelector: ''
  types:
    - Ingress
